# tcc-venv

./: .gitignore  AGENTS.md  LICENSE  README.md  pyproject.toml
.github/workflows/: publish.yml
src/tcc_venv/: __init__.py  cli.py  trampoline.c
tasks/: codex-review-2026-06-05.md  disclaim-bootstrap.md  release-public.md
