[project]
name = "tcc-venv"
version = "0.1.0"
description = "Install a stable, codesigned macOS TCC launcher (python-tcc) into a uv/venv"
readme = "README.md"
requires-python = ">=3.11"
license = "MIT"
license-files = ["LICENSE"]
authors = [{ name = "Moritz Möller", email = "mm@mxs.de" }]
keywords = ["macos", "tcc", "codesign", "uv", "venv", "full-disk-access"]
classifiers = [
    "Environment :: MacOS X",
    "Intended Audience :: Developers",
    "Operating System :: MacOS :: MacOS X",
    "Programming Language :: Python :: 3",
    "Topic :: Software Development :: Build Tools",
]
dependencies = []

[project.urls]
Homepage = "https://github.com/mo22/tcc-venv"
Repository = "https://github.com/mo22/tcc-venv"
Issues = "https://github.com/mo22/tcc-venv/issues"

[project.scripts]
tcc-venv = "tcc_venv.cli:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/tcc_venv"]

[tool.hatch.build.targets.wheel.force-include]
"src/tcc_venv/trampoline.c" = "tcc_venv/trampoline.c"
